fix: align items in cart

--- a/src/styles/pages/_cartDetail.scss
+++ b/src/styles/pages/_cartDetail.scss
@@ -31,7 +31,6 @@
 
 .cart-item-detail {
   --gap: 3rem;
-  justify-content: space-between;
 
   & img {
     max-width: 10rem;
